--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                             <div class="post-entry-1 h-100">
                                 <a href="#">
                                     <img
-                                        src="images/post_3.jpg"
+                                        src="images/blog_1.jpg"
                                         alt="Image"
                                         class="img-fluid"
                                     />
@@ -606,7 +606,7 @@
                             <div class="post-entry-1 h-100">
                                 <a href="#">
                                     <img
-                                        src="images/post_4.jpg"
+                                        src="images/blog_2.jpg"
                                         alt="Image"
                                         class="img-fluid"
                                     />
