--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
                     <div class="row">
                         <div class="col-lg-7 mb-5 mb-lg-0">
                             <img
-                                src="images/hero_1.jpg"
+                                src="images/about_1.jpg"
                                 alt="Image"
                                 class="img-fluid"
                             />
@@ -204,7 +204,7 @@
                     <div class="row">
                         <div class="col-lg-7 mb-5 mb-lg-0 order-lg-2">
                             <img
-                                src="images/hero_2.jpg"
+                                src="images/about_2.jpg"
                                 alt="Image"
                                 class="img-fluid"
                             />
